# learning

./: CMakeLists.txt  README.md  main.cpp
ChineseChess/: CMakeLists.txt
ChineseChess/include/: ChessBoard.hpp  Point.hpp
ChineseChess/include/pieces/: Adviser.hpp  Cannon.hpp  ChessPiece.hpp  Elephant.hpp  Horse.hpp  King.hpp  Pawn.hpp  Rook.hpp
ChineseChess/src/: ChessBoard.cpp  Point.cpp
ChineseChess/src/pieces/: Adviser.cpp  Cannon.cpp  ChessPiece.cpp  Elephant.cpp  Horse.cpp  King.cpp  Pawn.cpp  Rook.cpp
DeepLearning/: CMakeLists.txt
DeepLearning/include/: NeuralNetwork.hpp  NeuralNetworkDebug.hpp  NeuralNetworkTesting.hpp  pch.h
DeepLearning/include/config/: IConfig.hpp  LayerConfig.hpp  NeuralNetConfig.hpp
DeepLearning/include/data/: Data.hpp  IData.hpp  LayerData.hpp
DeepLearning/include/function/: activation.hpp
DeepLearning/include/layer/: DenseLayer.hpp  Layer.hpp
DeepLearning/include/optimizer/: Adam.hpp  Optimizer.hpp
DeepLearning/include/persistence/loaders/: ILoader.hpp  NetWorkLoader.hpp
DeepLearning/include/persistence/savers/: ISaver.hpp  NetWorkSaver.hpp
DeepLearning/src/: NeuralNetwork.cpp  NeuralNetworkDebug.cpp  NeuralNetworkTesting.cpp
DeepLearning/src/config/: IConfig.cpp  LayerConfig.cpp  NeuralNetConfig.cpp
DeepLearning/src/data/: Data.cpp  IData.cpp  LayerData.cpp
DeepLearning/src/function/: activation.cpp
DeepLearning/src/layer/: DenseLayer.cpp  Layer.cpp
DeepLearning/src/optimizer/: Adam.cpp
DeepLearning/src/persistence/loaders/: ILoader.cpp  NetWorkLoader.cpp
DeepLearning/src/persistence/savers/: ISaver.cpp  NetWorkSaver.cpp
resources/: app.rc  icon.bat
test/: a.cpp
